--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
       position:absolute;
       width:100%;
       height:100%;
-      object-fit:contain; /* Mostra a imagem inteira */
+      object-fit:contain;
       opacity:0;
       transition:opacity 1s ease-in-out;
       border-radius:16px;
-      background: var(--blue-dark); /* fundo se houver barras */
+      background: var(--blue-dark);
     }
 
     .slideshow img.active {opacity:1;}
@@ -141,55 +141,12 @@
     </div>
 
     <div class="right-panel">
-      <div class="slideshow" id="slideshow">
-        <img src="slides/Slide1.PNG" class="active" alt="Slide 1">
-        <img src="slides/Slide2.PNG" alt="Slide 2">
-        <img src="slides/Slide3.PNG" alt="Slide 3">
-        <img src="slides/Slide4.PNG" alt="Slide 4">
-        <img src="slides/Slide5.PNG" alt="Slide 5">
-        <img src="slides/Slide6.PNG" alt="Slide 6">
-        <img src="slides/Slide7.PNG" alt="Slide 7">
-        <img src="slides/Slide8.PNG" alt="Slide 8">
-        <img src="slides/Slide9.PNG" alt="Slide 9">
-        <img src="slides/Slide10.PNG" alt="Slide 10">
-        <img src="slides/Slide11.PNG" alt="Slide 11">
-        <img src="slides/Slide12.PNG" alt="Slide 12">
-        <img src="slides/Slide13.PNG" alt="Slide 13">
-        <img src="slides/Slide14.PNG" alt="Slide 14">
-        <img src="slides/Slide15.PNG" alt="Slide 15">
-        <img src="slides/Slide16.PNG" alt="Slide 16">
-        <img src="slides/Slide17.PNG" alt="Slide 17">
-        <img src="slides/Slide18.PNG" alt="Slide 18">
-        <img src="slides/Slide19.PNG" alt="Slide 19">
-        <img src="slides/Slide20.PNG" alt="Slide 20">
-        <img src="slides/Slide21.PNG" alt="Slide 21">
-        <img src="slides/Slide22.PNG" alt="Slide 22">
-        <img src="slides/Slide23.PNG" alt="Slide 23">
-        <img src="slides/Slide24.PNG" alt="Slide 24">
-        <img src="slides/Slide25.PNG" alt="Slide 25">
-        <img src="slides/Slide26.PNG" alt="Slide 26">
-        <img src="slides/Slide27.PNG" alt="Slide 27">
-        <img src="slides/Slide28.PNG" alt="Slide 28">
-        <img src="slides/Slide29.PNG" alt="Slide 29">
-        <img src="slides/Slide30.PNG" alt="Slide 30">
-        <img src="slides/Slide31.PNG" alt="Slide 31">
-        <img src="slides/Slide32.PNG" alt="Slide 32">
-        <img src="slides/Slide33.PNG" alt="Slide 33">
-        <img src="slides/Slide34.PNG" alt="Slide 34">
-        <img src="slides/Slide35.PNG" alt="Slide 35">
-        <img src="slides/Slide36.PNG" alt="Slide 36">
-        <img src="slides/Slide37.PNG" alt="Slide 37">
-        <img src="slides/Slide38.PNG" alt="Slide 38">
-        <img src="slides/Slide39.PNG" alt="Slide 39">
-        <img src="slides/Slide40.PNG" alt="Slide 40">
-        <img src="slides/Slide41.PNG" alt="Slide 41">
-        <img src="slides/Slide42.PNG" alt="Slide 42">
-        <img src="slides/Slide43.PNG" alt="Slide 43">
-      </div>
+      <div class="slideshow" id="slideshow"></div>
     </div>
   </div>
 
   <script>
+    // Countdown
     const daysEl = document.getElementById('days');
     const hoursEl = document.getElementById('hours');
     const minutesEl = document.getElementById('minutes');
@@ -236,6 +193,17 @@
 
     resetBtn.addEventListener('click', resetCountdown);
     startInterval();
+
+    // Slideshow automático
+    const slideshow = document.getElementById('slideshow');
+    const totalSlides = 43; // Total de imagens
+    for(let i=1; i<=totalSlides; i++){
+      const img = document.createElement('img');
+      img.src = `Slide${i}.PNG`;
+      img.alt = `Slide ${i}`;
+      if(i===1) img.classList.add('active');
+      slideshow.appendChild(img);
+    }
 
     const slides = document.querySelectorAll('.slideshow img');
     let current = 0;
