--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 10px 20px;
+      padding: 10px 20px 40px 20px; /* 👈 Espaço adicionado abaixo (40px) */
       background: rgba(255, 255, 255, 0.08);
       position: relative;
-      top: -10px; /* 👈 Eleva o slide um pouco, sem sobrepor */
+      top: -10px; /* Mantém a leve elevação */
       z-index: 1;
     }
 
